# wedding-invite

./: .gitignore  README.md  app.py  pyproject.toml
invite/: __init__.py
invite/core/: view.py
invite/static/css/: base.css  musicplayer.css
invite/static/js/: countdown.js  music.js
invite/templates/: index.html  index_rustic.html  test.html
